--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,19 @@
         height: 100%;
         object-fit: cover;
     }
+    .footer img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .back-to-top{
+        right: 5px;
+        bottom: 50px;
+    }
+}
+
+#rute{
+    padding-top:150px;
 }
 
 .page-header {
